001 Step 07 - Understanding Optional class in Java