@@ -1,22 +1,25 @@
 package com.wchamara.learnspringframework.examples.a8;
 
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 public class SimpleLauncherAppLauncherApplication {
 
     public static void main(String[] args) {
-        List<String> courses = List.of("Spring", "Spring Boot", "API", "Microservices", "AWS", "PCF", "Azure", "Docker", "Kubernetes");
-        printNamesStartWithSpringFunctional(courses);
-//        printNamesLengthGreaterThanFourFunctional(courses);
-    }
+//        Optional
+        List<String> arguments = Arrays.asList(args);
 
-    private static void printNamesLengthGreaterThanFourFunctional(List<String> courses) {
-        courses.stream().filter(course -> course.length() > 4).forEach(System.out::println);
-    }
+        Optional<String> first = Arrays.stream(args)
+                .filter(s -> s.startsWith("b")).findFirst();
 
-    private static void printNamesStartWithSpringFunctional(List<String> courses) {
-        courses.stream().filter(course -> course.contains("Spring")).forEach(System.out::println);
+        if (first.isPresent()) {
+            System.out.println("First argument starting with b: " + first.get());
+        } else {
+            System.out.println("No argument starting with b");
+        }
+        Optional<String> value = Optional.of("Hello");
+        Optional<String> empty = Optional.empty();
     }
-
 }
